test/org/midica/testfiles/failing/global-partial-empty.midica
INCLUDE inc/instruments.midica

* 0,1-2,,3

0 c /4
